Fix RuboCop warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,9 @@
+AllCops:
+  Exclude:
+    - 'bin/**/*'
+    - 'node_modules/**/*'
+    - 'vendor/**/*'
+
 Layout/LeadingCommentSpace:
   Exclude:
     - 'Gemfile'
