--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^3.2.3"
   },
   "devDependencies": {
     "prettier": "1.11.1",
