Migrate the Forty Rails app here

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,10 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
 
+Metrics/LineLength:
+  Exclude:
+    - 'app/views/**/*.jbuilder'
+
 Style/Documentation:
   Enabled: false
 
