--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -36,3 +36,4 @@ production:
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   client_token: <%= ENV["CLIENT_TOKEN"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  user_token: <%= ENV["USER_TOKEN"] %>
