Migrate Dum Reader
I had to commit some sins here to get it working, but it works!

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,8 +12,9 @@
 
 # Shared secrets are available across all environments.
 
-# shared:
-#   api_key: a1B2c3D4e5F6
+shared:
+  feedbin_username: <%= ENV['FEEDBIN_USERNAME'] %>
+  feedbin_password: <%= ENV['FEEDBIN_PASSWORD'] %>
 
 # Environmental secrets are only available for that specific environment.
 
