--- a/package.json
+++ b/package.json
@@ -10,11 +10,26 @@
     "styled-components": "^3.2.3"
   },
   "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "babel-preset-es2015": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.4.3",
     "prettier": "1.11.1",
     "webpack-dev-server": "2.11.2"
   },
+  "jest": {
+    "roots": [
+      "app/javascript"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript"
+    ]
+  },
   "scripts": {
     "prettier": "prettier --write 'app/javascript/**/*.js'",
-    "prettier-diff": "prettier --list-different 'app/javascript/**/*.js'"
+    "prettier-diff": "prettier --list-different 'app/javascript/**/*.js'",
+    "test": "jest"
   }
 }
