--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -34,7 +34,7 @@ test:
 # and move the `production:` environment over there.
 
 production:
-  admin_password: <%= ENV["ADMIN_PASSWORD"] %>
-  client_token: <%= ENV["CLIENT_TOKEN"] %>
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  user_token: <%= ENV["USER_TOKEN"] %>
+  admin_password: <%= ENV['ADMIN_PASSWORD'] %>
+  client_token: <%= ENV['CLIENT_TOKEN'] %>
+  secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
+  user_token: <%= ENV['USER_TOKEN'] %>
