Get signature from secrets

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -36,5 +36,6 @@ test:
 production:
   admin_password: <%= ENV['ADMIN_PASSWORD'] %>
   client_token: <%= ENV['CLIENT_TOKEN'] %>
+  hub_signature: <%= ENV['HUB_SIGNATURE'] %>
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
   user_token: <%= ENV['USER_TOKEN'] %>
