--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
             - vendor/bundle
       - run: yarn install
 
+      - run: chromedriver-update 2.37
+
       - run: mv config/database{.circle,}.yml
       - run: bundle exec rake db:create db:migrate
       - run: bundle exec rake webpacker:compile
