--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-  build:
+  build-and-test:
     working_directory: ~/monolithium
     docker:
       - image: artsy/ruby:2.5.1-node-chrome
@@ -34,3 +34,24 @@ jobs:
       - run:
           name: Tests
           command: bundle exec rake
+
+  deploy-production:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: Deploy to production
+          command: git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/monolithium.git master
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-and-test:
+      - deploy-production:
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: master
