--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,16 +23,25 @@ jobs:
           key: monolithium-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
-      - run: yarn install
-
-      - run: chromedriver-update 2.37
-
-      - run: mv config/database{.circle,}.yml
-      - run: bundle exec rake db:create db:migrate
-      - run: bundle exec rake webpacker:compile
 
       - run:
-          name: Tests
+          name: Yarn install
+          command: yarn install
+
+      - run:
+          name: Lock chromedriver
+          command: chromedriver-update 2.37
+
+      - run:
+          name: Setup database
+          command: mv config/database{.circle,}.yml && bundle exec rake db:create db:migrate
+
+      - run:
+          name: Compile webpacker
+          command: bundle exec rake webpacker:compile
+
+      - run:
+          name: Run tests
           command: bundle exec rake
 
   deploy-production:
