--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build-and-test:
+      - build-and-test
       - deploy-production:
           requires:
             - build-and-test
