--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ Layout/LeadingCommentSpace:
 
 Metrics/BlockLength:
   Exclude:
+    - 'config/routes.rb'
     - 'spec/**/*'
 
 Metrics/LineLength:
