--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "jest": "^23.6.0",
     "prettier": "1.14.3",
-    "webpack-dev-server": "3.1.8"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "jest": {
     "roots": [
