--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,19 +8,23 @@ Layout/LeadingCommentSpace:
   Exclude:
     - 'Gemfile'
 
-Metrics/BlockLength:
-  Exclude:
-    - 'config/routes.rb'
-    - 'spec/**/*'
-
-Metrics/LineLength:
+Layout/LineLength:
   Exclude:
     - 'app/views/**/*.jbuilder'
     - 'app/models/feedbin.rb'
     - 'config/routes.rb'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'config/routes.rb'
+    - 'spec/**/*'
 
 Style/Documentation:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Rails/ApplicationController:
+  Exclude:
+    - 'app/controllers/api_controller.rb'
