--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
+  "engines": {
+    "node": ">=10.15.3"
+  },
   "name": "monolithium",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.5.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "styled-components": "^3.4.9"
+    "@babel/preset-react": "^7.7.4",
+    "@rails/webpacker": "4.2.2",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "babel-jest": "^23.6.0",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "jest": "^23.6.0",
-    "prettier": "1.14.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^24.9.0",
+    "prettier": "1.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "jest": {
-    "roots": [
-      "app/javascript"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "app/javascript"
-    ]
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
-    "prettier": "prettier --write 'app/javascript/**/*.js'",
-    "prettier-diff": "prettier --list-different 'app/javascript/**/*.js'",
-    "test": "jest"
+    "prettier": "prettier --write 'app/javascript/**/*.{js,jsx,ts,tsx}'",
+    "prettier-check": "prettier --check 'app/javascript/**/*.{js,jsx,ts,tsx}'",
+    "test": "jest",
+    "type-check": "tsc --pretty --noEmit"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/app/javascript/testing/setup.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/vendor/bundle/",
+      "/config/webpack/"
+    ]
+  },
+  "prettier": {
+    "bracketSpacing": true,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
