--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "jest": "^24.9.0",
     "prettier": "1.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
+    "lint": "eslint 'app/javascript/**/*.{js,jsx,ts,tsx}'",
     "prettier": "prettier --write 'app/javascript/**/*.{js,jsx,ts,tsx}'",
     "prettier-check": "prettier --check 'app/javascript/**/*.{js,jsx,ts,tsx}'",
     "test": "jest",
