--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "env": { "browser": true },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
+  "rules": {
+    "react/prop-types": "off"
+  },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
