Convert a whole bunch more code to TS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
-  "env": { "browser": true },
+  "env": {
+    "browser": true,
+    "jest": true
+  },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
