--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.7",
     "@rails/webpacker": "4.2.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -18,6 +20,7 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "enzyme": "^3.11.0",
