--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,11 @@
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
     "react/prop-types": "off"
   },
