--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
@@ -31,7 +32,6 @@
     "eslint-plugin-react": "^7.17.0",
     "jest": "^24.9.0",
     "prettier": "1.19.1",
-    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
