--- a/package.json
+++ b/package.json
@@ -2,35 +2,40 @@
   "name": "monolithium",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.5.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@rails/webpacker": "^4.2.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^25.1.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "jest": "^23.6.0",
-    "prettier": "1.14.3",
+    "jest": "^25.1.0",
+    "prettier": "1.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^3.10.2"
   },
   "jest": {
     "roots": [
       "app/javascript"
     ],
+    "transform": {
+      "^.+\\.(ts|tsx|js|jsx)$": "babel-jest"
+    },
     "moduleDirectories": [
       "node_modules",
-      "app/javascript"
+      "<rootDir>/app/javascript"
     ]
   },
   "scripts": {
     "prettier": "prettier --write 'app/javascript/**/*.js'",
-    "prettier-diff": "prettier --list-different 'app/javascript/**/*.js'",
+    "prettier-check": "prettier --check 'app/javascript/**/*.js'",
     "test": "jest"
   }
 }
