--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@rails/webpacker": "^4.2.2",
     "@types/jest": "^25.1.1",
     "@types/react": "^16.9.19",
