--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-react": "^7.18.2",
     "jest": "^25.1.0",
     "prettier": "1.19.1",
