Fix ignore syntax
I couldn't figure out a better way so I'm just doing this.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,12 @@
     "jsx": "react"
   },
   "exclude": [
-    "**/*.spec.{ts|tsx}",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
     "app/javascript/testing/setup.ts",
     "node_modules",
-    "vendor",
-    "public"
+    "public",
+    "vendor"
   ],
   "compileOnSave": false
 }
