--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-  build-and-test:
+  test:
     working_directory: ~/monolithium
     docker:
       - image: circleci/ruby:2.7.1-node-browsers
@@ -49,30 +49,11 @@ jobs:
           command: bundle exec rake webpacker:compile
 
       - run:
-          name: Update Chrome
-          command: bundle exec rake webdrivers:chromedriver:update
-
-      - run:
           name: Run tests
           command: bundle exec rake
 
-  deploy-production:
-    docker:
-      - image: buildpack-deps:trusty
-    steps:
-      - checkout
-      - run:
-          name: Deploy to production
-          command: git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/monolithium.git master
-
 workflows:
   version: 2
-  build-deploy:
+  default:
     jobs:
-      - build-and-test
-      - deploy-production:
-          requires:
-            - build-and-test
-          filters:
-            branches:
-              only: master
+      - test
