Switch to encrypted secrets

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-ADMIN_PASSWORD=shhh
-CLIENT_TOKEN=shhh
-FEEDBIN_PASSWORD=REPLACE
-FEEDBIN_USERNAME=REPLACE
-HUB_SIGNATURE=REPLACE
+CREDS_GROUP=development
+RAILS_MASTER_KEY=REPLACE
