--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ jobs:
   test:
     working_directory: ~/monolithium
     docker:
-      - image: circleci/ruby:3.0.3-node-browsers
+      - image: cimg/ruby:3.2.2-browsers
         environment:
           RAILS_ENV: test
-      - image: circleci/postgres:10.1-alpine
+      - image: cimg/postgres:14.7
 
     steps:
       - checkout
