--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,5 +10,5 @@ amazon:
   service: S3
   access_key_id: <%= Monolithium.config.aws_access_key %>
   secret_access_key: <%= Monolithium.config.aws_secret_key %>
-  region: <%= Monolithium.config.aws_region %>
+  region: us-east-2
   bucket: mli-active-storage
